# a2s-query

./: README.md  pyproject.toml  setup.py
a2s_query/: __init__.py  enums.py  packet.py  utils.py
a2s_query/responses/: __init__.py  a2s_info_resp.py  a2s_player_resp.py
tests/: test_a2s_player.py  test_a2s_query.py
