[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "a2s_query"
description = "Simple python implementation of the A2S query protocol "
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

version = "0.1.0"
requires-python = ">=3.10.0"

dependencies = []

[project.urls]
"Homepage" = "https://github.com/biggus-developerus/a2s-query"
"Bug Tracker" = "https://github.com/biggus-developerus/a2s-query/issues"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"